refactor(web): 重写RequestUtils